--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 theme: jekyll-theme-leap-day
+email: somchandra.infosec@gmail.com
+url: "https://somchandra17.github.io"
+twitter_username: 0xs0m
+github_username: somchandra17
+
+google_analytics: G-L686M7CYB2
+linkedin_username: somchandra17
